outputs_20260329-005401-549feb91/codegen/production/build_logs/compiler_stderr.log
In file included from C:\Users\extanke\Downloads\merge\infineon_POC_MVP\unity/unity.h:22,
                 from C:\Users\extanke\AppData\Local\Temp\tdd_build_piyv7p_6\test\test_gtm_tom_3_phase_inverter_pwm.c:1:
C:\Users\extanke\AppData\Local\Temp\tdd_build_piyv7p_6\test\test_gtm_tom_3_phase_inverter_pwm.c: In function 'test_TC_G1_001_enable_guard_already_enabled':
C:\Users\extanke\AppData\Local\Temp\tdd_build_piyv7p_6\test\test_gtm_tom_3_phase_inverter_pwm.c:38:41: error: implicit declaration of function 'mock_IfxGtm_Cmu_setClkFrequency_getCallCount'; did you mean 'mock_IfxGtm_Cmu_setGclkFrequency_getCallCount'? [-Wimplicit-function-declaration]
   38 |     TEST_ASSERT_EQUAL_UINT32_MESSAGE(0, mock_IfxGtm_Cmu_setClkFrequency_getCallCount(), "CMU setClkFrequency must NOT be used by this module");
      |                                         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\Downloads\merge\infineon_POC_MVP\unity/unity_internals.h:904:184: note: in definition of macro 'UNITY_TEST_ASSERT_EQUAL_UINT32'
  904 | #define UNITY_TEST_ASSERT_EQUAL_UINT32(expected, actual, line, message)                          UnityAssertEqualNumber((UNITY_INT)(UNITY_UINT32)(expected), (UNITY_INT)(UNITY_UINT32)(actual), (message), (UNITY_LINE_TYPE)(line), UNITY_DISPLAY_STYLE_UINT32)
      |                                                                                                                                                                                        ^~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_piyv7p_6\test\test_gtm_tom_3_phase_inverter_pwm.c:38:5: note: in expansion of macro 'TEST_ASSERT_EQUAL_UINT32_MESSAGE'
   38 |     TEST_ASSERT_EQUAL_UINT32_MESSAGE(0, mock_IfxGtm_Cmu_setClkFrequency_getCallCount(), "CMU setClkFrequency must NOT be used by this module");
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
